protected/modules/yupe/views/assets/css/styles.css
/*------------------------------------------------------------------
[ Shortcuts / .shortcuts ]
*/
.shortcuts {
    text-align: left;
}

.shortcuts .shortcut {
    min-height: 114px;
    text-align: center;
    width: 114px;
    display: inline-block;
    padding: 12px 0;
    margin: 0 5px 1em;
    vertical-align: top;
    text-decoration: none;
    background: #F3F3F3;
    background-color: #f8f8f8;
    border: 1px solid #ddd;
    box-sizing: border-box;
    border-radius: 5px;
}

.shortcuts .shortcut .shortcut-icon {
    width: 100%;
    margin-top: .25em;
    margin-bottom: .35em;
    font-size: 32px;
    color: #555;
}

.shortcuts .shortcut:hover {
    background: #E8E8E8;
    background-color: #f0f0f0;
    background-repeat: repeat-x;
}

.shortcuts .shortcut:hover .shortcut-icon {
    color: #666;
}

.shortcuts .shortcut-label {
    display: block;
    font-weight: 400;
    color: #666;
    margin-top: 5px;
}

.action-nav-button {
    margin-bottom: 15px;
    position: relative;
    display: inline-block;
    text-align: center;
    min-height: 114px;
    width: 114px;
    display: inline-block;
}

a.shortcut {
    position: relative;
}

#page .shortcut .label i {
    margin-right: 2px;
    color: #fff;
}

.shortcut .label {
    position: absolute;
    top: 3px;
    right: 3px;
    padding: 5px;
    display: block;
    font-size: 100%;
}

.shortcut .cn {
    display: table-cell;
    vertical-align: middle;
    text-align: center;
    width: 114px;
    height: 88px;
}

/* General Style */
.error .redactor_box {
    border: 1px rgb(149, 59, 57) solid;
    -webkit-box-shadow: 0 0 6px rgb(213, 147, 146);
    -moz-box-shadow: 0 0 6px #d59392;
    box-shadow: 0 0 6px rgb(213, 147, 146);
}

html,
body {
    height: 100%;
}

#overall-wrap {
    min-height: 100%;
    margin: 0 auto -91px;
}

.navbar-fixed-top {
    border-bottom: 2px solid #FF9600;
}

.navbar-fixed-top, .navbar-fixed-bottom {
    z-index: 1055;
}

footer {
    clear: both;
    text-align: center;
    height: 91px;
    padding: 5px 0 5px;
    border-top: 1px solid #E5E5E5;
    line-height: 18px;
    color: #9D9D9D;
    font-size: 12px;
    background: #f8f8f8;
}

#footer-guard {
    height: 120px;
}

div#page {
    padding-top: 60px;
    padding-bottom: 50px;
}

.navbar-brand {
    padding: 7px 15px 15px 15px;
}

.nav-list > li {
    margin: 0 15px;
}

.nav-list > .active > a, .nav-list > .active > a:hover, .nav-list > .active > a:focus {
    background-color: #0088CC;
    color: #FFFFFF;
}

.nav li.nav-header, .nav-list li.nav-header {
    color: #999999;
    margin: 0;
}

.nav-list > li > a {
    color: #000;
    margin: 0 -15px;
}

.nav-header, li.nav-header a {
    display: block;
    padding: 3px 15px;
    font-size: 11px;
    font-weight: bold;
    line-height: 20px;

    text-transform: uppercase;
}

li.nav-header a {
    pointer-events: none;
    cursor: default;
    margin: 0 -15px;
    color: inherit;
}

/* fix submenu bootstrap 3 */
.dropdown-submenu {
    position: relative;
}

.dropdown-submenu > .dropdown-menu {
    top: 0;
    left: 100%;
    margin-top: -6px;
    margin-left: -1px;
    -webkit-border-radius: 0 6px 6px 6px;
    -moz-border-radius: 0 6px 6px 6px;
    border-radius: 0 6px 6px 6px;
}

.dropdown-submenu:hover > .dropdown-menu {
    display: block;
}

.dropdown-submenu > a:after {
    display: block;
    content: " ";
    float: right;
    width: 0;
    height: 0;
    border-color: transparent;
    border-style: solid;
    border-width: 5px 0 5px 5px;
    border-left-color: #cccccc;
    margin-top: 5px;
    margin-right: -10px;
}

.dropdown-submenu:hover > a:after {
    border-left-color: #ffffff;
}

.dropdown-submenu.pull-left {
    float: none;
}

.dropdown-submenu.pull-left > .dropdown-menu {
    left: -100%;
    margin-left: 10px;
    -webkit-border-radius: 6px 0 6px 6px;
    -moz-border-radius: 6px 0 6px 6px;
    border-radius: 6px 0 6px 6px;
}

table .button-column {
    white-space: nowrap;
}

.button-column a {
    color: #333;
    text-decoration: none;
}

.table-vmiddle td {
    vertical-align: middle;
}

#page [class*='icon-'].icon-white {
    color: #fff;
}

#page a:hover [class*='icon-'] {
    color: inherit;
}

.popover {
    min-width: 300px;
}

.popover-title {
    white-space: nowrap;
}

.popover-content, .popover-content .body {
    width: 100%;
}

.datepicker {
    z-index: 100 !important;
}

.ui-sortable tr {
    cursor: move;
    background: #fff;
}

.nav-tabs {
    margin-bottom: 10px;
}

input.form-control[type="file"] {
    background: inherit;
}

.treeview .checkbox {
    margin: 0;
}


/* постраничная навигация в гридах */
.pager-container {
    position: absolute;
}

.pager-container .pagination {
    margin: 26px 0 0 0;
}

/* Override redactor styles */

.redactor-toolbar-tooltip {
    z-index: 1055;
}

